src/petal/snapshots/petal__petal__parser__tests__groups-4.snap
---
source: src/petal/parser.rs
expression: "parse(\"a ^ (b + c)\")"
---
BinaryOp {
    left: Ident {
        name: "a",
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 1,
            },
        },
    },
    op: Token {
        token_type: Caret,
        lexeme: "^",
        literal: None,
        span: Span {
            start: Pos {
                line: 0,
                col: 3,
            },
            end: Pos {
                line: 0,
                col: 3,
            },
        },
    },
    right: BinaryOp {
        left: Ident {
            name: "b",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 6,
                },
                end: Pos {
                    line: 0,
                    col: 6,
                },
            },
        },
        op: Token {
            token_type: Plus,
            lexeme: "+",
            literal: None,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 8,
                },
                end: Pos {
                    line: 0,
                    col: 8,
                },
            },
        },
        right: Ident {
            name: "c",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 10,
                },
                end: Pos {
                    line: 0,
                    col: 10,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 6,
            },
            end: Pos {
                line: 0,
                col: 10,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 1,
        },
        end: Pos {
            line: 0,
            col: 10,
        },
    },
}
