src/petal/snapshots/petal__petal__parser__tests__groups-5.snap
---
source: src/petal/parser.rs
expression: "parse(\"(a ^ b) ^ c\")"
---
BinaryOp {
    left: BinaryOp {
        left: Ident {
            name: "a",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 2,
                },
                end: Pos {
                    line: 0,
                    col: 2,
                },
            },
        },
        op: Token {
            token_type: Caret,
            lexeme: "^",
            literal: None,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 4,
                },
                end: Pos {
                    line: 0,
                    col: 4,
                },
            },
        },
        right: Ident {
            name: "b",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 6,
                },
                end: Pos {
                    line: 0,
                    col: 6,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 2,
            },
            end: Pos {
                line: 0,
                col: 6,
            },
        },
    },
    op: Token {
        token_type: Caret,
        lexeme: "^",
        literal: None,
        span: Span {
            start: Pos {
                line: 0,
                col: 9,
            },
            end: Pos {
                line: 0,
                col: 9,
            },
        },
    },
    right: Ident {
        name: "c",
        span: Span {
            start: Pos {
                line: 0,
                col: 11,
            },
            end: Pos {
                line: 0,
                col: 11,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 2,
        },
        end: Pos {
            line: 0,
            col: 11,
        },
    },
}
