src/petal/snapshots/petal__petal__parser__tests__groups.snap
---
source: src/petal/parser.rs
expression: expr
---
Number {
    value: 1.0,
    loc: (
        TokenPos {
            line: 0,
            col: 2,
        },
        TokenPos {
            line: 0,
            col: 2,
        },
    ),
}
