src/petal/snapshots/petal__petal__parser__tests__identifiers-2.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"foo\")"
---
[
    ExprNode {
        expr: Ident(
            Identifier {
                name: "foo",
                span: Span(
                    Pos(
                        1,
                    ),
                    Pos(
                        3,
                    ),
                ),
            },
        ),
        span: Span(
            Pos(
                1,
            ),
            Pos(
                3,
            ),
        ),
    },
]
