src/petal/snapshots/petal__petal__parser__tests__ifs-2.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"\n            if cond {\n                a\n            } else {\n                b\n            }\n        \")"
---
IfStmt {
    condition: Ident {
        name: "cond",
        span: Span {
            start: Pos {
                line: 1,
                col: 15,
            },
            end: Pos {
                line: 1,
                col: 18,
            },
        },
    },
    then_block: Block {
        statements: [
            ExprStmt {
                expr: Ident {
                    name: "a",
                    span: Span {
                        start: Pos {
                            line: 2,
                            col: 16,
                        },
                        end: Pos {
                            line: 2,
                            col: 16,
                        },
                    },
                },
                span: Span {
                    start: Pos {
                        line: 2,
                        col: 16,
                    },
                    end: Pos {
                        line: 2,
                        col: 16,
                    },
                },
            },
        ],
        span: Span {
            start: Pos {
                line: 1,
                col: 20,
            },
            end: Pos {
                line: 3,
                col: 12,
            },
        },
    },
    else_block: Some(
        Block {
            statements: [
                ExprStmt {
                    expr: Ident {
                        name: "b",
                        span: Span {
                            start: Pos {
                                line: 4,
                                col: 16,
                            },
                            end: Pos {
                                line: 4,
                                col: 16,
                            },
                        },
                    },
                    span: Span {
                        start: Pos {
                            line: 4,
                            col: 16,
                        },
                        end: Pos {
                            line: 4,
                            col: 16,
                        },
                    },
                },
            ],
            span: Span {
                start: Pos {
                    line: 3,
                    col: 19,
                },
                end: Pos {
                    line: 5,
                    col: 12,
                },
            },
        },
    ),
    span: Span {
        start: Pos {
            line: 1,
            col: 12,
        },
        end: Pos {
            line: 5,
            col: 12,
        },
    },
}
