src/petal/snapshots/petal__petal__parser__tests__infix-5.snap
---
source: src/petal/parser.rs
expression: "parse(\"1 ? 2 : 3\")"
---
Conditional {
    condition: Number {
        value: 1.0,
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 1,
            },
        },
    },
    then_branch: Number {
        value: 2.0,
        span: Span {
            start: Pos {
                line: 0,
                col: 5,
            },
            end: Pos {
                line: 0,
                col: 5,
            },
        },
    },
    else_branch: Number {
        value: 3.0,
        span: Span {
            start: Pos {
                line: 0,
                col: 9,
            },
            end: Pos {
                line: 0,
                col: 9,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 3,
        },
        end: Pos {
            line: 0,
            col: 3,
        },
    },
}
