src/petal/snapshots/petal__petal__parser__tests__let_declarations-3.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"let a: Int = b\")"
---
Let(
    LetDecl {
        name: "a",
        ty: Some(
            TypeAnnotation {
                name: "Int",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 8,
                    },
                    end: Pos {
                        line: 0,
                        col: 10,
                    },
                },
            },
        ),
        init: Ident {
            name: "b",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 14,
                },
                end: Pos {
                    line: 0,
                    col: 14,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 14,
            },
        },
    },
)
