src/petal/snapshots/petal__petal__parser__tests__let_declarations.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"let a = b\")"
---
Let(
    LetDecl {
        name: "a",
        ty: None,
        init: Ident {
            name: "b",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 9,
                },
                end: Pos {
                    line: 0,
                    col: 9,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 9,
            },
        },
    },
)
