src/petal/snapshots/petal__petal__parser__tests__literals-2.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"123.456\")"
---
[
    ExprNode {
        expr: Float(
            123.456,
        ),
        span: Span {
            start: Pos(
                0,
            ),
            end: Some(
                Pos(
                    6,
                ),
            ),
        },
    },
]
